# -

scr/: run.bat
scr/alltry/: CMakeLists.txt  autofind.c  intervalone.c  intervalone.h  intervalthird.c  intervalthird.h  intervaltwo.c  intervaltwo.h  one.c  one.h  opening.c  opening.h  second4.c  second4.h  third.c  third.h
